kustomize/envoyproxy-gateway/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: envoy-gateway-system
    name: envoy-gateway-system
  name: envoy-gateway-system
