kustomize/envoyproxy-gateway/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: flex-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoyproxy
  infrastructure:
    annotations:
      metallb.universe.tf/address-pool: openstack-external 
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.pbandark.com"
    allowedRoutes:
      namespaces:
        from: All
